Fixes .popup_container z-index values

--- a/Themes/default/css/index.css
+++ b/Themes/default/css/index.css
@@ -2792,6 +2792,12 @@ dl.addrules dt.floatleft {
 	background: rgba(40, 64, 80, 0.5);
 	z-index: 6;
 }
+#genericmenu > .popup_container {
+	z-index: 5;
+}
+#adm_submenus > .popup_container {
+	z-index: 4;
+}
 .popup_window,
 #main_menu .popup_window,
 #genericmenu .popup_window,
@@ -2829,10 +2835,6 @@ dl.addrules dt.floatleft {
 #genericmenu .popup_heading,
 #adm_submenus .popup_heading {
 	display: none;
-}
-#genericmenu > .popup_container,
-#adm_submenus > .popup_container {
-	z-index: 5;
 }
 #main_menu .popup_container,
 #genericmenu > .popup_container,
